updates filtros e readmin md
